# bootcamp-python-jornada-de-dados

./: README.md  desafio_aula07.py  pyproject.toml
aula01/: exercicio01.py  exercicio02.py  exercicio03.py  exercicio_final.py
aula02/: aula.py  desafio.py  exercicios.py  main.py
aula03/: desafio.py  exercicio03.py  exercicio04.py  exercicio06.py  exercicio07.py  exercicios.py
aula03/exercicios/: exercicio01.py  exercicio02.py  exercicio05.py  exercicio08.py  exercicio09.py
aula03/exercicios/exercicios_while/: exercicio11.py  exercicio13.py  exercicio15.py
aula03/exercicios_while/: exercicio14.py
aula04/: desafio.py  exemplo_dict.py
aula04/exercicios/exercicios_list_dict/: exercicio01.py  exercicio02.py  exercicio04.py  exercicio05.py  exercicio06.py  exercicio07.py  exercicio08.py  exercicio09.py  exercicio12.py  exercicios_list_dict.py
aula04/parte1/exercicios/exercicios_list_dict/: exercicio03.py  exercicio10.py  exercicio11.py  exercicio13.py  exercicio14.py
aula04/parte2/: aula.py  desafio.py  exemplo.csv
aula04/parte2/exercicios/: exercicio01.py  exercicio03.py  exercicio04.py  exercicio05.py  exercicios.py
aula07/exercicios/parte01/: exercicio01.py  exercicio02.py  exercicio03.py  exercicio04.py
aula08/: data.parquet  etl.py  pipeline.py
